spec/fixtures/test_suites/malformed/invalid_methods_defined/no_methods.rb
class NoMethods < TestCaseTemplate
  @description = 'testcase for test'
  @requires = 'Individual'
  @protocol = 'test'
  @author = 'test'
end
